fixes overflowing div width on user activity page
detailed explanation: https://meta.discourse.org/t/long-words-not-wrapping-in-user-activity-page/68181/8?u=xrav3nz

--- a/app/assets/stylesheets/desktop/user.scss
+++ b/app/assets/stylesheets/desktop/user.scss
@@ -143,7 +143,6 @@
    }
 
   .user-right {
-    width: 900px;
     display: table-cell;
   }
 
